<resources>
    <string name="app_name">Kidney Wellness</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>
    <string name="example_activities"> <b> Examples: </b> <i>Gardening, Walking The Dog, Yard Work, Sweeping </i> </string>
    <string name="next_button">"Next" </string>
    <string name="long_test_string">"This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. This is a really really long string. " </string>

    <!-- Strings related to demographics -->
    <string name="age_prompt">What is your age?</string>
    <string-array name="age_array">
        <item>18 to 24 years</item>
        <item>25 to 34 years</item>
        <item>35 to 44 years</item>
        <item>45 to 54 years</item>
        <item>55 to 64 years</item>
        <item>65 to 74 years</item>
        <item>75 or older</item>
    </string-array>

    <string name="marital_prompt">What is your marital status?</string>
    <string-array name="marital_array">
        <item>Single (never married)</item>
        <item>Married</item>
        <item>Separated</item>
        <item>Widowed</item>
        <item>Divorced</item>
        <item>Partnership</item>
    </string-array>

    <string name="gender_prompt">I identify my gender as… </string>

    <string name="race_prompt">What is your race? Check as many of the following federal
        category(ies) that best describes the <i>race</i> of your family and yourself.</string>

    <string name="education_prompt">What is your highest level of education?</string>
      <string-array name="education_array">
        <item>Please select an option from the drop down menu</item>
        <item>Grade school/Intermediate school</item>
        <item>Completed some high school</item>
        <item>High school graduate</item>
        <item>Completed some college</item>
        <item>Associate degree</item>
        <item>Bachelor's degree</item>
        <item>Graduate degree</item>
        <item>Ph.D., law degree, medical degree</item>
    </string-array>

    <string name="work_prompt">What is your work status?</string>
    <string-array name="work_array">
        <item>Please select an option from the drop down menu</item>
        <item>Employed Full time</item>
        <item>Employed Part time</item>
        <item>Self-Employed</item>
        <item>Retired</item>
        <item>Disabled</item>
    </string-array>

    <string name="present_health_prompt">How would you rate your current health (1 = Very bad 5 = Very Good</string>
    <string name="comorbidities_prompt">Please select which of the following conditions you have had or do have</string>

    <string-array name="activity_array">
        <item>How often do you exercise</item>
        <item>I do not exercise</item>
        <item>About once every two weeks</item>
        <item>About once a week</item>
        <item>2–3 times a week</item>
        <item>Everyday</item>
        <item>More than once a day</item>
    </string-array>

    <string-array name="appetite_array">
        <item>Select Appetite</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Average</item>
        <item>Poor</item>
        <item>Very Poor</item>
    </string-array>

    <string name = "fatigue_prompt">How often did you experience fatigue within the last 24 hours </string>
    <string-array name="fatigue_array">
        <item>Select fatigue</item>
        <item>None</item>
        <item>Rarely</item>
        <item>Sometimes</item>
        <item>Often</item>
        <item>Almost Always</item>
    </string-array>

    <string-array name="num_threads_array">
        <item>10</item>
        <item>15</item>
        <item>25</item>
        <item>50</item>
    </string-array>

    <string-array name="sort_by_array">
        <item>Date</item>
        <item>Likes</item>
    </string-array>

    <string-array name="times_array">
        <item>12:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
    </string-array>

    <string-array name="am_pm_array">
        <item>AM</item>
        <item>PM</item>
    </string-array>

</resources>
