<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="CKD.Android.Demographics_3"
    android:orientation="vertical"
    android:background="@drawable/main_background_gradient">

    <TextView
        android:id="@+id/Demo3_TV_EducationPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education_prompt"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"/>


    <Spinner
        android:id="@+id/Demo3_SPN_Education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/education_array"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"
        android:spinnerMode="dropdown"
        android:theme="@style/Spinner2"/>

    <TextView
        android:id="@+id/Demo3_TV_WorkPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_prompt"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"/>

    <Spinner
        android:id="@+id/Demo3_SPN_Work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/work_array"
        android:layout_margin="20dp"
        android:textColor="@android:color/black"
        android:spinnerMode="dropdown"
        android:theme="@style/Spinner2"/>

    <TextView
        android:id="@+id/Demo3_TV_HealthPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/present_health_prompt"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/Demo3_CB_Health_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/Demo3_CB_Health_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textColor="@android:color/white"/>


        <CheckBox
            android:id="@+id/Demo3_CB_Health_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textColor="@android:color/white"/>

        <CheckBox
            android:id="@+id/Demo3_CB_Health_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textColor="@android:color/white"/>

        <CheckBox
            android:id="@+id/Demo3_CB_Health_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/Demo3_Btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:background="@drawable/button_background"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:layout_gravity="center|bottom"/>
    </LinearLayout>


</LinearLayout>